# bionemo-framework

./: 404.html  Dockerfile  README.md  index.html  objects.inv  sitemap.xml
API_reference/: index.html
SUMMARY/: index.html
assets/images/megatron_background/: index.html
datasets/: index.html
datasets/CELLxGENE/: index.html
datasets/uniprot/: index.html
models/: index.html
models/esm2/: index.html
models/geneformer/: index.html
scripts/protein/esm2/: esm2_pretrain.py
search/: search_index.json
setup/: requirements.txt
sub-packages/bionemo-esm2/: pyproject.toml
sub-packages/bionemo-esm2/src/bionemo/esm2/model/finetune/: datamodule.py  infer.py  train.py
sub-packages/bionemo-esm2/src/bionemo/esm2/run/: config_models.py  main.py  recipes.py
sub-packages/bionemo-esm2/src/bionemo/esm2/scripts/: esm2_infer.py  esm2_pretrain.py  train_esm2.py
sub-packages/bionemo-esm2/tests/bionemo/esm2/scripts/: test_esm2_infer.py  test_esm2_pretrain.py  test_infer_esm2.py  test_pydantic_train.py  test_train_esm2.py
sub-packages/bionemo-noodles/: Cargo.toml  pyproject.toml
user-guide/: index.html
user-guide/SUMMARY/: index.html
user-guide/appendix/FAQ/: index.html
user-guide/appendix/releasenotes-fw/: index.html
user-guide/background/SUMMARY/: index.html
user-guide/background/megatron_datasets/: index.html
user-guide/background/nemo2/: index.html
user-guide/contributing/Writing Documentation/: index.html
user-guide/contributing/code-review/: index.html
user-guide/contributing/contributing/: index.html
user-guide/getting-started/: index.html
(+141 files in other folders)
