[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-esm2"
readme = "README.md"
description = "BioNeMo ESM2 model."
authors = [{ name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    # bionemo sub-packages
    'bionemo-core',
    'bionemo-llm',
    # external
]

[project.scripts]
esm2_infer = "bionemo.esm2.scripts.esm2_infer:esm2_infer_entrypoint"
esm2_pretrain = "bionemo.esm2.scripts.train_geneformer:esm2_pretrain_entrypoint"
esm2_perplexity = "bionemo.esm2.scripts.esm2_dataset_perplexity:main_cli"

# Make sure that the tokenizer files are included along with the python files during installation.
[tool.setuptools.package-data]
"bionemo.esm2" = ["data/tokenizer/*.json", "data/tokenizer/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bionemo.*"]
namespaces = true
exclude = ["test*."]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.uv]
cache-keys = [{ git = true }]
